# RISC-V

./: .gitignore  MEMORY.md  Makefile  README.md  讨论清单.md
docs/: Web调试器使用文档.md
docs/tools/: add_overlay.py  datapath_editor.html  embed_svg.py
docs/前置知识/: RISC-V指令编码学习笔记.md  数据流.md  计算机知识.md
docs/参考项目结构1/: README.md
docs/参考项目结构1/include/: cpu.h  debugger.h  mmu.h
docs/参考项目结构1/src/: debugger.c  elf_loader.c  main.c  syscall.c
docs/参考项目结构2/: CMakeLists.txt  hello.s
docs/参考项目结构2/include/: common.h
docs/参考项目结构2/src/: main.c  simulator.c  simulator.h
docs/参考项目结构2/src/cpu/: cpu.c  cpu.h  decode.c  decode.h  execute.c  execute.h  pipeline.h
docs/参考项目结构2/src/debugger/: breakpoint.c  breakpoint.h  debugger.c  debugger.h  rsp.h
docs/参考项目结构2/src/loader/: elf.c  elf.h
docs/参考项目结构2/src/memory/: memory.c  memory.h
docs/参考项目结构2/src/syscall/: syscall.c  syscall.h
docs/参考项目结构2/tests/: add_test.s  hello.c  hello.s  run_tests.sh
docs/提交材料/: Git提交记录.md
docs/设计文档/: README.md
docs/设计文档/共同部分/: 公共类型定义.md  并行开发与验收方案.md  程序设计.md  程序设计2.md  缩写约定.md
docs/设计文档/嘉俊/: debug设计文档.md
docs/设计文档/嘉华/: linux设计文档.md  loader设计文档.md
docs/设计文档/李特/: CPU分阶段实现方案.md  CPU设计文档.md
docs/设计文档/焕聪/: F扩展设计文档.md  memory设计文档.md
docs/说明文档/: Web调试器使用文档.md
include/: memory.h  syscall.h
src/: 指令解码表.md
src/cpu/: cpu.c  decode.c
src/include/: default_elf.h  demo_programs.h  readme.md  simulator.h  types.h
src/include/cpu/: cpu.h  decode.h  exec_internal.h  execute.h
src/include/debugger/: debugger.h  web_server.h
src/include/linux/: syscall.h
src/include/loader/: elf_loader.h  types.h
src/include/memory/: memory.h  mmu.h
src/memory/: memory.c  mmu.c
src/src/: main.c  readme.md  simulator.c
src/src/cpu/: cpu.c  decode.c  execute.c
src/src/debugger/: breakpoint.c  debugger.c  debugger_internal.h  web_server.c
src/src/linux/: syscall.c
src/src/loader/: .gitkeep  elf_load.c  elf_section.c  elf_segment.c  elf_stack.c  elf_validate.c  loader_internal.h
src/src/memory/: memory.c  mmu.c
src/test/: e2e_test.c
src/test/cpu/: decode_test.c  execute_test.c  f_test.c  m_test.c  multi_cycle_test.c  pipeline_test.c
src/test/debugger/: debugger_test.c
src/test/demos/: demo.ld  fact.c  fib.c  hello.c  prime.c  sort.c  systub.h
src/test/e2e/: e2e_test.c  (+2 more)
test/loader/: gen_minimal_elf.c  minimal.elf  test_load.c  test_validate.c
(+20 files in other folders)
